# reg-policy-weekly-report-skill-lite

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
agents/: openai.yaml
config/: business_rules.yaml  evolution_rules.json  few_shot_library.json  forbidden_expansion_library.json  prompts.yaml  style.yaml
config/impact/: action_templates.json  pingan_entities.json  professional_company_impact_rules.json  scene_families.json  status_action_strength.json  topic_families.json
docs/: CLAUDE_CODE_PROMPT.md  HISTORICAL_BUSINESS_REPORT_PATTERNS.md  QUALITY_CHECKLIST.md  SELF_EVOLUTION_WORKFLOW.md  expected_output_notes.md  gap_analysis_against_real_report.md  run_instructions.md
examples/: example_claude_code_command.md  example_final_weekly_report.md  example_weekly_policies.json
references/: HISTORICAL_BUSINESS_REPORT_PATTERNS.md  QUALITY_CHECKLIST.md  REFERENCE.md  SELF_EVOLUTION_WORKFLOW.md
scripts/: check_overfit.py  compare_reports.py  extract_docx_style.py  policies_text_to_json.py
src/: evolution.py  extractor.py  fetcher.py  generator.py  learning.py  main.py  renderer.py  schemas.py  validator.py
tests/: test_evolution.py  test_extractor.py  test_fetcher.py  test_policies_text_to_json.py  test_renderer.py
